using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant : MonoBehaviour
{
    //state
    public static string Player = "Player";
    public static string DeadBoy = "DeadBoy";
    public static string Enemy = "Enemy";


    //Sound
    public static string Run = "Run";
    public static string Jump = "Jump";
    public static string Attack = "Attack";
    public static string GetHit = "GetHit";
    public static string Enemy_GetHit = "Enemy_GetHit";
    public static string Enemy_Dead = "Enemy_Dead";
}
